--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
@@ -13,10 +15,12 @@
         "twbs/bootstrap": "^3.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "squizlabs/php_codesniffer": "^3.1"
     },
     "autoload": {
         "classmap": [
@@ -48,6 +52,12 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "lint": [
+            "./vendor/bin/phpcs --standard=PSR2 app/ config/ routes/"
+        ],
+        "lint-fix": [
+            "./vendor/bin/phpcbf --standard=PSR2 app/ config/ routes/"
         ]
     },
     "config": {
